--- a/public/css/style.css
+++ b/public/css/style.css
@@ -36,6 +36,10 @@ label .fa {
 
 img#edit-img {
   padding: 25px; }
+  @media (max-width: 990px) {
+    img#edit-img {
+      padding: 0;
+      width: 100%; } }
 
 body {
   background-image: url("../img/background.jpg");
@@ -95,6 +99,13 @@ body {
       color: #cc4020; }
   #app > footer .about {
     font-style: italic; }
+  @media (max-width: 990px) {
+    #app > footer .col-md-9 {
+      width: 75%;
+      float: left; }
+    #app > footer .col-md-3 {
+      width: 25%;
+      float: left; } }
 
 .navbar-default {
   background-color: rgba(35, 36, 39, 0.5);
@@ -194,9 +205,9 @@ h1, h2, h3 {
 
 form em {
   font-size: .8em; }
-form input:focus {
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(253, 72, 31, 0.6);
-  outline-color: rgba(253, 72, 31, 0.6); }
+@media (max-width: 990px) {
+  form div[class^=col-md-].pull-left, form div[class^=col-md-].pull-right {
+    float: none !important; } }
 form#post-form {
   padding-top: .5em;
   position: relative; }
@@ -211,15 +222,6 @@ form#post-form {
     background-color: rgba(0, 0, 0, 0.2);
     height: 8em;
     padding-right: calc(54px + 1.4em); }
-form input[type="number"].form-control {
-  padding: 6px; }
-form .form-control {
-  border-radius: 0;
-  background-color: #3a3b3e;
-  border-color: #3a3b3e; }
-  form .form-control:focus {
-    border-color: #3a3b3e;
-    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(253, 72, 31, 0.6); }
 form select {
   width: 100%; }
 form [class^='select2'] {
@@ -236,6 +238,8 @@ form ::-moz-placeholder {
   opacity: 1; }
 form :-ms-input-placeholder {
   color: #777 !important; }
+form input[type="number"].form-control {
+  padding: 6px; }
 form .blocklink input[type="checkbox"] ~ label:before, form .blocklink input[type="checkbox"]:checked ~ label:before, form .blocklink input[type="checkbox"] ~ label:active, form .blocklink input[type="checkbox"]:focus ~ label:before {
   color: white; }
 form input[type=radio],
@@ -277,6 +281,9 @@ form input[type=radio]:focus ~ label {
   color: #cc4020; }
 form input {
   color: #96999f !important; }
+  form input:focus {
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(253, 72, 31, 0.6);
+    outline-color: rgba(253, 72, 31, 0.6); }
 form input[type="search"], form input[type="email"] {
   -moz-appearance: textfield;
   -webkit-appearance: textfield;
@@ -286,10 +293,20 @@ form label.form-control {
   text-align: center;
   font-weight: normal;
   cursor: pointer; }
+form .form-control {
+  border-radius: 0;
+  background-color: #3a3b3e;
+  border-color: #3a3b3e; }
+  form .form-control:focus {
+    border-color: #3a3b3e;
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(253, 72, 31, 0.6); }
 form .banner {
   display: none; }
 form textarea {
   overflow: hidden; }
+@media (max-width: 990px) {
+  form button[type="submit"] {
+    width: 100%; } }
 
 .banner {
   max-height: 300px;
@@ -398,8 +415,10 @@ form textarea {
   border-radius: 0; }
   .btn.btn-primary {
     background-color: #cc4020;
-    border-color: #cc4020;
-    margin-top: 1em; }
+    border-color: #cc4020; }
+    @media (min-width: 990px) {
+      .btn.btn-primary {
+        margin-top: 1em; } }
     .btn.btn-primary:focus, .btn.btn-primary:active, .btn.btn-primary:hover, .btn.btn-primary:active:hover {
       background-color: #bc3010;
       box-shadow: none;
@@ -448,6 +467,9 @@ form textarea {
 #map {
   width: 100%;
   min-height: 200px; }
+  @media (max-width: 990px) {
+    #map {
+      display: none; } }
   #map a[href^="http://maps.google.com/maps"] {
     display: none !important; }
   #map a[href^="https://maps.google.com/maps"] {
@@ -825,5 +847,17 @@ a.accent:hover, a.accent:focus, a.accent:active {
     background-color: #777; }
   .sweet-alert button:not(.cancel) {
     background-color: #cc4020 !important; }
+
+.errors, .success {
+  margin: auto 0; }
+
+.profile-img.profile {
+  width: 250px;
+  display: inline-block; }
+  @media (max-width: 990px) {
+    .profile-img.profile {
+      width: 100%; }
+      .profile-img.profile img {
+        width: 100%; } }
 
 /*# sourceMappingURL=style.css.map */
