--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -29,7 +29,10 @@ label .fa {
 	img { width: 100%; height: 100%; }
 }
 .tiny-thumb { height: 1em; width: auto; margin-right: 1em; }
-img#edit-img { padding: 25px; }
+img#edit-img {
+	padding: 25px;
+	@media #{$mobile-bootstrap} { padding: 0; width: 100%; }
+}
 body {
 	background-image: url('../img/background.jpg'); background-attachment: fixed; background-size: cover; color: #fff;
 	font-family: 'Raleway', sans-serif;
@@ -72,6 +75,10 @@ body {
 	}
 
 	.about { font-style: italic; }
+	@media #{$mobile-bootstrap} {
+		.col-md-9 { width: 75%; float: left; }
+		.col-md-3 { width: 25%; float: left; }
+	}
 }
 
 .navbar-default {
@@ -123,7 +130,11 @@ h1,h2,h3 { font-family: 'Oswald', sans-serif; }
 
 form {
 	em { font-size: .8em; }
-	input:focus { box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(253, 72, 31, 0.6); outline-color: rgba(253, 72, 31, 0.6);; }
+	@media #{$mobile-bootstrap} {
+		div[class^=col-md-] {
+			&.pull-left, &.pull-right { float: none !important; }
+		}
+	}
 	&#post-form {
 		padding-top: .5em; position: relative;
 		.btn-primary { position: absolute; bottom: .7em; right: .7em; }
@@ -131,11 +142,6 @@ form {
 			resize: none; width: 100%; color: #999; background-color: $overlay-color; height: 8em;
 			padding-right: calc(54px + 1.4em);
 		}
-	}
-	input[type="number"].form-control { padding: 6px; }
-	.form-control {
-		border-radius: 0; background-color: #3a3b3e; border-color: #3a3b3e;
-		&:focus { border-color: #3a3b3e; box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(253, 72, 31, 0.6); }
 	}
 
 	select { width: 100%; }
@@ -147,10 +153,12 @@ form {
 	::-moz-placeholder { color: #777 !important; opacity: 1 }
 	:-ms-input-placeholder { color: #777 !important; }
 
+	input[type="number"].form-control { padding: 6px; }
 	.blocklink input[type="checkbox"] {
 		& ~ label:before, &:checked ~ label:before,
 		& ~ label:active, &:focus ~ label:before { color: white; }
 	}
+
 	// FA checkboxes/radio buttons
 	input[type=radio],
 	input[type=checkbox] {
@@ -177,7 +185,13 @@ form {
 	input[type=checkbox]:focus ~ label:before,
 	input[type=radio]:focus ~ label { color: $accent; }
 
-	input { color: #96999f !important; }
+	input {
+		color: #96999f !important;
+		&:focus {
+			box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(253, 72, 31, 0.6);
+			outline-color: rgba(253, 72, 31, 0.6);;
+		}
+	}
 	input[type="search"], input[type="email"] {
 		-moz-appearance: textfield;
 		-webkit-appearance: textfield;
@@ -186,8 +200,16 @@ form {
 	label.form-control {
 		color: #fff; text-align: center; font-weight: normal; cursor: pointer;
 	}
+	.form-control {
+		border-radius: 0; background-color: #3a3b3e; border-color: #3a3b3e;
+		&:focus { border-color: #3a3b3e; box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(253, 72, 31, 0.6); }
+	}
+
 	.banner { display: none; }
 	textarea { overflow: hidden; }
+	button[type="submit"] {
+		@media #{$mobile-bootstrap} { width: 100%; }
+	}
 }
 
 .banner {
@@ -255,7 +277,8 @@ form {
 .btn {
 	border-radius: 0;
 	&.btn-primary {
-		background-color: $accent; border-color: $accent; margin-top: 1em;
+		background-color: $accent; border-color: $accent;
+		@media #{$tablet-bootstrap} { margin-top: 1em; }
 		&:focus, &:active, &:hover, &:active:hover { background-color: #bc3010; box-shadow: none; border-color: #bc3010; outline-color: transparent; }
 	}
 	&.btn-secondary { background-color: $bgc; }
@@ -285,6 +308,7 @@ form {
 // GMaps
 #map {
 	width: 100%; min-height: 200px;
+	@media #{$mobile-bootstrap} { display: none; }
 	a[href^="http://maps.google.com/maps"]{display:none !important}
 	a[href^="https://maps.google.com/maps"]{display:none !important}
 
@@ -527,5 +551,17 @@ a.accent:hover, a.accent:focus, a.accent:active { color: $accent; }
 		border-radius: 0 !important;
 		&.cancel { background-color: #777; }
 		&:not(.cancel) { background-color: $accent !important; }
+	}
+}
+
+.errors, .success { margin: auto 0; }
+
+.profile-img {
+	&.profile {
+		width: 250px; display: inline-block;
+		@media #{$mobile-bootstrap} {
+			width: 100%;
+			img { width: 100%; }
+		}
 	}
 }
