--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -218,7 +218,7 @@ form {
 }
 
 .row.rounds { margin-bottom: 3em; }
-.users, .teams, .blocklink-wrapper { display: flex; display: -webkit-flex; display: -ms-flexbox; margin: auto 0px; }
+.blocklink-wrapper { display: flex; display: -webkit-flex; display: -ms-flexbox; margin: auto 0px; }
 .blocklink {
 	padding: .5em; position: relative;
 	&:hover { background-color: $overlay-color; cursor: pointer; }
@@ -278,7 +278,7 @@ form {
 	border-radius: 0;
 	&.btn-primary {
 		background-color: $accent; border-color: $accent;
-		@media #{$tablet-bootstrap} { margin-top: 1em; }
+		@media #{$tablet-bootstrap} {margin-top: 1em; }
 		&:focus, &:active, &:hover, &:active:hover { background-color: #bc3010; box-shadow: none; border-color: #bc3010; outline-color: transparent; }
 	}
 	&.btn-secondary { background-color: $bgc; }
@@ -556,12 +556,52 @@ a.accent:hover, a.accent:focus, a.accent:active { color: $accent; }
 
 .errors, .success { margin: auto 0; }
 
-.profile-img {
-	&.profile {
-		width: 250px; display: inline-block;
-		@media #{$mobile-bootstrap} {
-			width: 100%;
-			img { width: 100%; }
+.profile-wrapper {
+	h3 { margin-top: 2em; }
+	.profile-title {
+		margin-top: 2em; text-align: center;
+	}
+	>.row>.col-md-12>.profile-img {
+		margin: 2em auto;
+		&.profile {
+			width: 250px; max-width: 250px; display: inline-block;
+			@media #{$mobile-bootstrap} {
+				width: 100%;
+				img { width: 100%; }
+			}
 		}
 	}
+	.stats-col {
+		.stats {
+			@media #{$mobile-bootstrap} {
+				max-width: 21em; margin: auto;
+				.col-md-4 { width: 33%; float: left; }
+			}
+			h4 {
+				text-align: center;
+				>i { margin-right: 1em; }
+				.ratio { margin-right: 0; }
+				@media #{$mobile-bootstrap} {
+					span:not(.ratio) { display: none; }
+					i { margin-right: 0; }
+				}
+			}
+			p { text-align: center; }
+		}
+	}
+	.members, .friends, .teams {
+		max-width: 15em;
+		@media #{$mobile-bootstrap} {
+			margin: auto;
+			.col-md-2 { width: 12.5%; float: left; }
+			.col-md-3 { width: 25%; float: left; }
+			.col-md-4 { width: 33%; float: left; }
+			.col-md-offset-2 { margin-left: 12.5%; }
+			.col-md-offset-3 { margin-left: 25%; }
+			.col-md-offset-4 { margin-left: 33%; }
+			.col-md-offset-6 { margin-left: 50%; }
+		}
+	}
+	.description { text-align: center; margin: 2em 0; }
+	.divider { border-top: 1px solid $accent; }
 }
