Style & UX improvements (previously uncommitted files)

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -35,8 +35,10 @@ label .fa {
   margin-right: 1em; }
 
 img#edit-img {
-  padding: 25px; }
-  @media (max-width: 990px) {
+  padding: 25px;
+  display: inline-block;
+  max-width: 300px; }
+  @media (max-width: 991px) {
     img#edit-img {
       padding: 0;
       width: 100%; } }
@@ -58,26 +60,29 @@ body {
       body #app > .container main > .banner {
         margin: -1em -1em 0;
         width: calc(100% + 2em); }
-  @media (max-width: 990px) {
-    body .sidebar {
-      display: none; } }
-  body .sidebar ul {
-    padding: 0;
-    margin-bottom: 2em;
-    list-style-type: none; }
-    body .sidebar ul li {
-      padding: .1em .5em; }
-      body .sidebar ul li:hover:not(.empty) {
-        background-color: #505355; }
-      body .sidebar ul li:hover:hover a {
-        text-decoration: none;
-        color: #fff; }
-      body .sidebar ul li a {
-        color: #ccc; }
+  body .sidebar {
+    display: none; }
+    @media (min-width: 992px) {
+      body .sidebar {
+        display: block; } }
+    body .sidebar ul {
+      padding: 0;
+      margin-bottom: 2em;
+      list-style-type: none; }
+      body .sidebar ul li {
+        padding: .1em .5em; }
+        body .sidebar ul li:hover:not(.empty) {
+          background-color: #505355; }
+        body .sidebar ul li:hover:hover a {
+          text-decoration: none;
+          color: #fff; }
+        body .sidebar ul li a {
+          color: #ccc; }
   body #trusted {
     height: 1.5em;
     width: auto;
-    max-width: 100%; }
+    max-width: 100%;
+    margin-right: .5em; }
 
 #app > footer {
   width: 100%;
@@ -99,7 +104,7 @@ body {
       color: #cc4020; }
   #app > footer .about {
     font-style: italic; }
-  @media (max-width: 990px) {
+  @media (max-width: 991px) {
     #app > footer .col-md-9 {
       width: 75%;
       float: left; }
@@ -111,7 +116,7 @@ body {
   background-color: rgba(35, 36, 39, 0.5);
   border-color: rgba(35, 36, 39, 0.5);
   z-index: 999; }
-  @media (max-width: 990px) {
+  @media (max-width: 991px) {
     .navbar-default .navbar-nav {
       display: none; } }
   .navbar-default .navbar-nav > li > a {
@@ -205,7 +210,7 @@ h1, h2, h3 {
 
 form em {
   font-size: .8em; }
-@media (max-width: 990px) {
+@media (max-width: 991px) {
   form div[class^=col-md-].pull-left, form div[class^=col-md-].pull-right {
     float: none !important; } }
 form#post-form {
@@ -215,6 +220,10 @@ form#post-form {
     position: absolute;
     bottom: .7em;
     right: .7em; }
+    @media (max-width: 991px) {
+      form#post-form .btn-primary {
+        bottom: 0;
+        right: 0; } }
   form#post-form textarea {
     resize: none;
     width: 100%;
@@ -222,6 +231,11 @@ form#post-form {
     background-color: rgba(0, 0, 0, 0.2);
     height: 8em;
     padding-right: calc(54px + 1.4em); }
+@media (min-width: 992px) and (max-width: 1199px) {
+  form#edit-form.settings > .row > .col-md-6.pull-right {
+    width: 55%; }
+  form#edit-form.settings > .row > .col-md-6:not(.pull-right) {
+    width: 45%; } }
 form select {
   width: 100%; }
 form [class^='select2'] {
@@ -293,6 +307,20 @@ form label.form-control {
   text-align: center;
   font-weight: normal;
   cursor: pointer; }
+form .slider.slider-horizontal [class^="tooltip"], form .slider.slider-horizontal [class^="tooltop"]:hover, form .slider.slider-horizontal [class^="tooltop"]:focus {
+  display: none !important; }
+form .slider.slider-horizontal .slider-selection {
+  background: #cc4020;
+  opacity: .7; }
+form .slider.slider-horizontal .slider-handle {
+  background: #cc4020; }
+@media (max-width: 991px) {
+  form label.control-label {
+    margin-top: 2em; } }
+@media (max-width: 991px) {
+  form label[for="full-img"] {
+    max-width: 300px;
+    margin: auto; } }
 form .form-control {
   border-radius: 0;
   background-color: #3a3b3e;
@@ -300,12 +328,10 @@ form .form-control {
   form .form-control:focus {
     border-color: #3a3b3e;
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(253, 72, 31, 0.6); }
-form .banner {
-  display: none; }
 form textarea {
   overflow: hidden; }
-@media (max-width: 990px) {
-  form button[type="submit"] {
+@media (max-width: 991px) {
+  form button[type="submit"]:not(.btn-small) {
     width: 100%; } }
 
 .banner {
@@ -381,12 +407,17 @@ form textarea {
     .navbar-header #logo {
       float: right;
       margin-left: 0; } }
+  @media (max-width: 350px) {
+    .navbar-header #logo {
+      width: 80%; } }
   @media (min-width: 80em) {
     .navbar-header #logo {
       margin-left: 0; } }
   .navbar-header #logo:hover svg path {
     fill: #dedada;
     transition: fill .2s; }
+  .navbar-header #logo svg {
+    max-width: 100%; }
 
 #feed {
   margin-top: 1.5em; }
@@ -416,7 +447,7 @@ form textarea {
   .btn.btn-primary {
     background-color: #cc4020;
     border-color: #cc4020; }
-    @media (min-width: 990px) {
+    @media (min-width: 992px) {
       .btn.btn-primary {
         margin-top: 1em; } }
     .btn.btn-primary:focus, .btn.btn-primary:active, .btn.btn-primary:hover, .btn.btn-primary:active:hover {
@@ -467,7 +498,7 @@ form textarea {
 #map {
   width: 100%;
   min-height: 200px; }
-  @media (max-width: 990px) {
+  @media (max-width: 991px) {
     #map {
       display: none; } }
   #map a[href^="http://maps.google.com/maps"] {
@@ -787,13 +818,13 @@ a.accent:hover, a.accent:focus, a.accent:active {
 
 .menu-hidden {
   display: none; }
-  @media (max-width: 990px) {
+  @media (max-width: 991px) {
     .menu-hidden {
       display: block; } }
 
 .menu-shadow {
   display: none; }
-  @media (min-width: 990px) {
+  @media (min-width: 992px) {
     .menu-shadow.menu-hidden {
       display: none !important; } }
 
@@ -862,12 +893,12 @@ a.accent:hover, a.accent:focus, a.accent:active {
     width: 250px;
     max-width: 250px;
     display: inline-block; }
-    @media (max-width: 990px) {
+    @media (max-width: 991px) {
       .profile-wrapper > .row > .col-md-12 > .profile-img.profile {
         width: 100%; }
         .profile-wrapper > .row > .col-md-12 > .profile-img.profile img {
           width: 100%; } }
-@media (max-width: 990px) {
+@media (max-width: 991px) {
   .profile-wrapper .stats-col .stats {
     max-width: 21em;
     margin: auto; }
@@ -880,39 +911,84 @@ a.accent:hover, a.accent:focus, a.accent:active {
     margin-right: 1em; }
   .profile-wrapper .stats-col .stats h4 .ratio {
     margin-right: 0; }
-  @media (max-width: 990px) {
+  @media (max-width: 991px) {
     .profile-wrapper .stats-col .stats h4 span:not(.ratio) {
       display: none; }
     .profile-wrapper .stats-col .stats h4 i {
       margin-right: 0; } }
 .profile-wrapper .stats-col .stats p {
   text-align: center; }
-.profile-wrapper .members, .profile-wrapper .friends, .profile-wrapper .teams {
-  max-width: 15em; }
-  @media (max-width: 990px) {
-    .profile-wrapper .members, .profile-wrapper .friends, .profile-wrapper .teams {
-      margin: auto; }
-      .profile-wrapper .members .col-md-2, .profile-wrapper .friends .col-md-2, .profile-wrapper .teams .col-md-2 {
-        width: 12.5%;
-        float: left; }
-      .profile-wrapper .members .col-md-3, .profile-wrapper .friends .col-md-3, .profile-wrapper .teams .col-md-3 {
-        width: 25%;
-        float: left; }
-      .profile-wrapper .members .col-md-4, .profile-wrapper .friends .col-md-4, .profile-wrapper .teams .col-md-4 {
-        width: 33%;
-        float: left; }
-      .profile-wrapper .members .col-md-offset-2, .profile-wrapper .friends .col-md-offset-2, .profile-wrapper .teams .col-md-offset-2 {
-        margin-left: 12.5%; }
-      .profile-wrapper .members .col-md-offset-3, .profile-wrapper .friends .col-md-offset-3, .profile-wrapper .teams .col-md-offset-3 {
-        margin-left: 25%; }
-      .profile-wrapper .members .col-md-offset-4, .profile-wrapper .friends .col-md-offset-4, .profile-wrapper .teams .col-md-offset-4 {
-        margin-left: 33%; }
-      .profile-wrapper .members .col-md-offset-6, .profile-wrapper .friends .col-md-offset-6, .profile-wrapper .teams .col-md-offset-6 {
-        margin-left: 50%; } }
+@media (max-width: 47em) {
+  .profile-wrapper .data .col-md-8.col-md-offset-2 {
+    width: 83.33%;
+    margin-left: 8.33%; } }
+@media (max-width: 991px) {
+  .profile-wrapper .members, .profile-wrapper .friends, .profile-wrapper .teams {
+    max-width: 15em;
+    margin: auto; } }
 .profile-wrapper .description {
   text-align: center;
   margin: 2em 0; }
 .profile-wrapper .divider {
-  border-top: 1px solid #cc4020; }
+  border-top: 1px solid #cc4020;
+  margin-top: 48px; }
+.profile-wrapper .admin-controls {
+  margin-top: 2em; }
+.profile-wrapper a.message {
+  display: inline-block; }
+  .profile-wrapper a.message i.fa {
+    margin-right: 1em; }
+
+@media (max-width: 991px) {
+  .persist-cols .col-md-1, .profile-wrapper .data .col-md-1, .profile-wrapper .members .col-md-1, .profile-wrapper .friends .col-md-1, .profile-wrapper .teams .col-md-1 {
+    width: 8.33%;
+    float: left; }
+  .persist-cols .col-md-2, .profile-wrapper .data .col-md-2, .profile-wrapper .members .col-md-2, .profile-wrapper .friends .col-md-2, .profile-wrapper .teams .col-md-2 {
+    width: 16.66%;
+    float: left; }
+  .persist-cols .col-md-3, .profile-wrapper .data .col-md-3, .profile-wrapper .members .col-md-3, .profile-wrapper .friends .col-md-3, .profile-wrapper .teams .col-md-3 {
+    width: 25%;
+    float: left; }
+  .persist-cols .col-md-4, .profile-wrapper .data .col-md-4, .profile-wrapper .members .col-md-4, .profile-wrapper .friends .col-md-4, .profile-wrapper .teams .col-md-4 {
+    width: 33.33%;
+    float: left; }
+  .persist-cols .col-md-5, .profile-wrapper .data .col-md-5, .profile-wrapper .members .col-md-5, .profile-wrapper .friends .col-md-5, .profile-wrapper .teams .col-md-5 {
+    width: 41.66%;
+    float: left; }
+  .persist-cols .col-md-6, .profile-wrapper .data .col-md-6, .profile-wrapper .members .col-md-6, .profile-wrapper .friends .col-md-6, .profile-wrapper .teams .col-md-6 {
+    width: 50%;
+    float: left; }
+  .persist-cols .col-md-7, .profile-wrapper .data .col-md-7, .profile-wrapper .members .col-md-7, .profile-wrapper .friends .col-md-7, .profile-wrapper .teams .col-md-7 {
+    width: 58.33%;
+    float: left; }
+  .persist-cols .col-md-8, .profile-wrapper .data .col-md-8, .profile-wrapper .members .col-md-8, .profile-wrapper .friends .col-md-8, .profile-wrapper .teams .col-md-8 {
+    width: 66.66%;
+    float: left; }
+  .persist-cols .col-md-9, .profile-wrapper .data .col-md-9, .profile-wrapper .members .col-md-9, .profile-wrapper .friends .col-md-9, .profile-wrapper .teams .col-md-9 {
+    width: 75%;
+    float: left; }
+  .persist-cols .col-md-10, .profile-wrapper .data .col-md-10, .profile-wrapper .members .col-md-10, .profile-wrapper .friends .col-md-10, .profile-wrapper .teams .col-md-10 {
+    width: 83.33%;
+    float: left; }
+  .persist-cols .col-md-offset-1, .profile-wrapper .data .col-md-offset-1, .profile-wrapper .members .col-md-offset-1, .profile-wrapper .friends .col-md-offset-1, .profile-wrapper .teams .col-md-offset-1 {
+    margin-left: 8.33%; }
+  .persist-cols .col-md-offset-2, .profile-wrapper .data .col-md-offset-2, .profile-wrapper .members .col-md-offset-2, .profile-wrapper .friends .col-md-offset-2, .profile-wrapper .teams .col-md-offset-2 {
+    margin-left: 16.66%; }
+  .persist-cols .col-md-offset-3, .profile-wrapper .data .col-md-offset-3, .profile-wrapper .members .col-md-offset-3, .profile-wrapper .friends .col-md-offset-3, .profile-wrapper .teams .col-md-offset-3 {
+    margin-left: 25%; }
+  .persist-cols .col-md-offset-4, .profile-wrapper .data .col-md-offset-4, .profile-wrapper .members .col-md-offset-4, .profile-wrapper .friends .col-md-offset-4, .profile-wrapper .teams .col-md-offset-4 {
+    margin-left: 33.33%; }
+  .persist-cols .col-md-offset-5, .profile-wrapper .data .col-md-offset-5, .profile-wrapper .members .col-md-offset-5, .profile-wrapper .friends .col-md-offset-5, .profile-wrapper .teams .col-md-offset-5 {
+    margin-left: 41.66%; }
+  .persist-cols .col-md-offset-6, .profile-wrapper .data .col-md-offset-6, .profile-wrapper .members .col-md-offset-6, .profile-wrapper .friends .col-md-offset-6, .profile-wrapper .teams .col-md-offset-6 {
+    margin-left: 50%; }
+  .persist-cols .col-md-offset-7, .profile-wrapper .data .col-md-offset-7, .profile-wrapper .members .col-md-offset-7, .profile-wrapper .friends .col-md-offset-7, .profile-wrapper .teams .col-md-offset-7 {
+    margin-left: 58.33%; }
+  .persist-cols .col-md-offset-8, .profile-wrapper .data .col-md-offset-8, .profile-wrapper .members .col-md-offset-8, .profile-wrapper .friends .col-md-offset-8, .profile-wrapper .teams .col-md-offset-8 {
+    margin-left: 66.66%; }
+  .persist-cols .col-md-offset-9, .profile-wrapper .data .col-md-offset-9, .profile-wrapper .members .col-md-offset-9, .profile-wrapper .friends .col-md-offset-9, .profile-wrapper .teams .col-md-offset-9 {
+    margin-left: 75%; }
+  .persist-cols .col-md-offset-10, .profile-wrapper .data .col-md-offset-10, .profile-wrapper .members .col-md-offset-10, .profile-wrapper .friends .col-md-offset-10, .profile-wrapper .teams .col-md-offset-10 {
+    margin-left: 83.33%; } }
 
 /*# sourceMappingURL=style.css.map */
