--- a/public/css/style.css
+++ b/public/css/style.css
@@ -465,6 +465,9 @@ form textarea {
     margin-top: 1em; }
     .btn.btn-load:hover, .btn.btn-load:focus, .btn.btn-load:active {
       opacity: .8; }
+  .btn.btn-danger, .btn.btn-danger:hover, .btn.btn-danger:focus, .btn.btn-danger:active {
+    background-color: #f00;
+    border-color: #f00; }
   .btn.btn-dropdown {
     background-color: transparent;
     border-color: transparent;
@@ -835,6 +838,27 @@ a.accent:hover, a.accent:focus, a.accent:active {
   border: none;
   border-top: 1px solid #434548; }
 
+.recipients {
+  margin-bottom: 1em; }
+  .recipients .blocklink {
+    width: 3em !important;
+    height: 3em;
+    padding: 0; }
+    .recipients .blocklink:hover .profile-img {
+      opacity: .7; }
+    .recipients .blocklink .profile-img {
+      margin: 0;
+      width: 100%;
+      height: 100%; }
+  .recipients .btn-primary {
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    line-height: calc(3em - 12px); }
+    @media (min-width: 992px) {
+      .recipients .btn-primary {
+        margin-top: 0; } }
+
 #message-box {
   height: 18em;
   background-color: rgba(35, 36, 39, 0.5);
@@ -940,55 +964,59 @@ a.accent:hover, a.accent:focus, a.accent:active {
     margin-right: 1em; }
 
 @media (max-width: 991px) {
-  .persist-cols .col-md-1, .profile-wrapper .data .col-md-1, .profile-wrapper .members .col-md-1, .profile-wrapper .friends .col-md-1, .profile-wrapper .teams .col-md-1 {
+  .team-members .members .col-md-2, .team-members .admins .col-md-2, .team-members .requests .col-md-2 {
+    width: 33% !important; } }
+
+@media (max-width: 991px) {
+  .persist-cols .col-md-1, .recipients .col-md-1, .profile-wrapper .data .col-md-1, .profile-wrapper .members .col-md-1, .profile-wrapper .friends .col-md-1, .profile-wrapper .teams .col-md-1 {
     width: 8.33%;
     float: left; }
-  .persist-cols .col-md-2, .profile-wrapper .data .col-md-2, .profile-wrapper .members .col-md-2, .profile-wrapper .friends .col-md-2, .profile-wrapper .teams .col-md-2 {
+  .persist-cols .col-md-2, .recipients .col-md-2, .profile-wrapper .data .col-md-2, .profile-wrapper .members .col-md-2, .profile-wrapper .friends .col-md-2, .profile-wrapper .teams .col-md-2 {
     width: 16.66%;
     float: left; }
-  .persist-cols .col-md-3, .profile-wrapper .data .col-md-3, .profile-wrapper .members .col-md-3, .profile-wrapper .friends .col-md-3, .profile-wrapper .teams .col-md-3 {
+  .persist-cols .col-md-3, .recipients .col-md-3, .profile-wrapper .data .col-md-3, .profile-wrapper .members .col-md-3, .profile-wrapper .friends .col-md-3, .profile-wrapper .teams .col-md-3 {
     width: 25%;
     float: left; }
-  .persist-cols .col-md-4, .profile-wrapper .data .col-md-4, .profile-wrapper .members .col-md-4, .profile-wrapper .friends .col-md-4, .profile-wrapper .teams .col-md-4 {
+  .persist-cols .col-md-4, .recipients .col-md-4, .profile-wrapper .data .col-md-4, .profile-wrapper .members .col-md-4, .profile-wrapper .friends .col-md-4, .profile-wrapper .teams .col-md-4 {
     width: 33.33%;
     float: left; }
-  .persist-cols .col-md-5, .profile-wrapper .data .col-md-5, .profile-wrapper .members .col-md-5, .profile-wrapper .friends .col-md-5, .profile-wrapper .teams .col-md-5 {
+  .persist-cols .col-md-5, .recipients .col-md-5, .profile-wrapper .data .col-md-5, .profile-wrapper .members .col-md-5, .profile-wrapper .friends .col-md-5, .profile-wrapper .teams .col-md-5 {
     width: 41.66%;
     float: left; }
-  .persist-cols .col-md-6, .profile-wrapper .data .col-md-6, .profile-wrapper .members .col-md-6, .profile-wrapper .friends .col-md-6, .profile-wrapper .teams .col-md-6 {
+  .persist-cols .col-md-6, .recipients .col-md-6, .profile-wrapper .data .col-md-6, .profile-wrapper .members .col-md-6, .profile-wrapper .friends .col-md-6, .profile-wrapper .teams .col-md-6 {
     width: 50%;
     float: left; }
-  .persist-cols .col-md-7, .profile-wrapper .data .col-md-7, .profile-wrapper .members .col-md-7, .profile-wrapper .friends .col-md-7, .profile-wrapper .teams .col-md-7 {
+  .persist-cols .col-md-7, .recipients .col-md-7, .profile-wrapper .data .col-md-7, .profile-wrapper .members .col-md-7, .profile-wrapper .friends .col-md-7, .profile-wrapper .teams .col-md-7 {
     width: 58.33%;
     float: left; }
-  .persist-cols .col-md-8, .profile-wrapper .data .col-md-8, .profile-wrapper .members .col-md-8, .profile-wrapper .friends .col-md-8, .profile-wrapper .teams .col-md-8 {
+  .persist-cols .col-md-8, .recipients .col-md-8, .profile-wrapper .data .col-md-8, .profile-wrapper .members .col-md-8, .profile-wrapper .friends .col-md-8, .profile-wrapper .teams .col-md-8 {
     width: 66.66%;
     float: left; }
-  .persist-cols .col-md-9, .profile-wrapper .data .col-md-9, .profile-wrapper .members .col-md-9, .profile-wrapper .friends .col-md-9, .profile-wrapper .teams .col-md-9 {
+  .persist-cols .col-md-9, .recipients .col-md-9, .profile-wrapper .data .col-md-9, .profile-wrapper .members .col-md-9, .profile-wrapper .friends .col-md-9, .profile-wrapper .teams .col-md-9 {
     width: 75%;
     float: left; }
-  .persist-cols .col-md-10, .profile-wrapper .data .col-md-10, .profile-wrapper .members .col-md-10, .profile-wrapper .friends .col-md-10, .profile-wrapper .teams .col-md-10 {
+  .persist-cols .col-md-10, .recipients .col-md-10, .profile-wrapper .data .col-md-10, .profile-wrapper .members .col-md-10, .profile-wrapper .friends .col-md-10, .profile-wrapper .teams .col-md-10 {
     width: 83.33%;
     float: left; }
-  .persist-cols .col-md-offset-1, .profile-wrapper .data .col-md-offset-1, .profile-wrapper .members .col-md-offset-1, .profile-wrapper .friends .col-md-offset-1, .profile-wrapper .teams .col-md-offset-1 {
+  .persist-cols .col-md-offset-1, .recipients .col-md-offset-1, .profile-wrapper .data .col-md-offset-1, .profile-wrapper .members .col-md-offset-1, .profile-wrapper .friends .col-md-offset-1, .profile-wrapper .teams .col-md-offset-1 {
     margin-left: 8.33%; }
-  .persist-cols .col-md-offset-2, .profile-wrapper .data .col-md-offset-2, .profile-wrapper .members .col-md-offset-2, .profile-wrapper .friends .col-md-offset-2, .profile-wrapper .teams .col-md-offset-2 {
+  .persist-cols .col-md-offset-2, .recipients .col-md-offset-2, .profile-wrapper .data .col-md-offset-2, .profile-wrapper .members .col-md-offset-2, .profile-wrapper .friends .col-md-offset-2, .profile-wrapper .teams .col-md-offset-2 {
     margin-left: 16.66%; }
-  .persist-cols .col-md-offset-3, .profile-wrapper .data .col-md-offset-3, .profile-wrapper .members .col-md-offset-3, .profile-wrapper .friends .col-md-offset-3, .profile-wrapper .teams .col-md-offset-3 {
+  .persist-cols .col-md-offset-3, .recipients .col-md-offset-3, .profile-wrapper .data .col-md-offset-3, .profile-wrapper .members .col-md-offset-3, .profile-wrapper .friends .col-md-offset-3, .profile-wrapper .teams .col-md-offset-3 {
     margin-left: 25%; }
-  .persist-cols .col-md-offset-4, .profile-wrapper .data .col-md-offset-4, .profile-wrapper .members .col-md-offset-4, .profile-wrapper .friends .col-md-offset-4, .profile-wrapper .teams .col-md-offset-4 {
+  .persist-cols .col-md-offset-4, .recipients .col-md-offset-4, .profile-wrapper .data .col-md-offset-4, .profile-wrapper .members .col-md-offset-4, .profile-wrapper .friends .col-md-offset-4, .profile-wrapper .teams .col-md-offset-4 {
     margin-left: 33.33%; }
-  .persist-cols .col-md-offset-5, .profile-wrapper .data .col-md-offset-5, .profile-wrapper .members .col-md-offset-5, .profile-wrapper .friends .col-md-offset-5, .profile-wrapper .teams .col-md-offset-5 {
+  .persist-cols .col-md-offset-5, .recipients .col-md-offset-5, .profile-wrapper .data .col-md-offset-5, .profile-wrapper .members .col-md-offset-5, .profile-wrapper .friends .col-md-offset-5, .profile-wrapper .teams .col-md-offset-5 {
     margin-left: 41.66%; }
-  .persist-cols .col-md-offset-6, .profile-wrapper .data .col-md-offset-6, .profile-wrapper .members .col-md-offset-6, .profile-wrapper .friends .col-md-offset-6, .profile-wrapper .teams .col-md-offset-6 {
+  .persist-cols .col-md-offset-6, .recipients .col-md-offset-6, .profile-wrapper .data .col-md-offset-6, .profile-wrapper .members .col-md-offset-6, .profile-wrapper .friends .col-md-offset-6, .profile-wrapper .teams .col-md-offset-6 {
     margin-left: 50%; }
-  .persist-cols .col-md-offset-7, .profile-wrapper .data .col-md-offset-7, .profile-wrapper .members .col-md-offset-7, .profile-wrapper .friends .col-md-offset-7, .profile-wrapper .teams .col-md-offset-7 {
+  .persist-cols .col-md-offset-7, .recipients .col-md-offset-7, .profile-wrapper .data .col-md-offset-7, .profile-wrapper .members .col-md-offset-7, .profile-wrapper .friends .col-md-offset-7, .profile-wrapper .teams .col-md-offset-7 {
     margin-left: 58.33%; }
-  .persist-cols .col-md-offset-8, .profile-wrapper .data .col-md-offset-8, .profile-wrapper .members .col-md-offset-8, .profile-wrapper .friends .col-md-offset-8, .profile-wrapper .teams .col-md-offset-8 {
+  .persist-cols .col-md-offset-8, .recipients .col-md-offset-8, .profile-wrapper .data .col-md-offset-8, .profile-wrapper .members .col-md-offset-8, .profile-wrapper .friends .col-md-offset-8, .profile-wrapper .teams .col-md-offset-8 {
     margin-left: 66.66%; }
-  .persist-cols .col-md-offset-9, .profile-wrapper .data .col-md-offset-9, .profile-wrapper .members .col-md-offset-9, .profile-wrapper .friends .col-md-offset-9, .profile-wrapper .teams .col-md-offset-9 {
+  .persist-cols .col-md-offset-9, .recipients .col-md-offset-9, .profile-wrapper .data .col-md-offset-9, .profile-wrapper .members .col-md-offset-9, .profile-wrapper .friends .col-md-offset-9, .profile-wrapper .teams .col-md-offset-9 {
     margin-left: 75%; }
-  .persist-cols .col-md-offset-10, .profile-wrapper .data .col-md-offset-10, .profile-wrapper .members .col-md-offset-10, .profile-wrapper .friends .col-md-offset-10, .profile-wrapper .teams .col-md-offset-10 {
+  .persist-cols .col-md-offset-10, .recipients .col-md-offset-10, .profile-wrapper .data .col-md-offset-10, .profile-wrapper .members .col-md-offset-10, .profile-wrapper .friends .col-md-offset-10, .profile-wrapper .teams .col-md-offset-10 {
     margin-left: 83.33%; } }
 
 /*# sourceMappingURL=style.css.map */
